--- a/style.css
+++ b/style.css
@@ -1,85 +1,44 @@
-body {
-  font-family: 'Open Sans', sans-serif;
-}
-
-main {
-  width: 600px;
-  margin: 0 auto;
-}
-
-.newsletter-form {
-  color: #666666;
-  border: 1px solid #cccccc;
-  padding: 10px;
-  border-radius: 3px;
+header {
   position: relative;
+  text-align: left;
 }
-
-input[type="text"] {
-  width: 100%;
-  box-sizing: border-box;
-  height: 30px;
-  margin: 0 0 5px;
-}
-
-input[type="submit"] {
-  width: 100%;
-  box-sizing: border-box;
-  background: #3cb878;
-  border: 0;
-  color: white;
-  height: 30px;
-  margin: 0 0 10px;
-  cursor: pointer;
-}
-
-.newsletter-form h2 {
-  margin-top: 0;
-}
-
-a {
-  color: #3CB878;
-}
-
-.exit-button {
+.center {
   position: absolute;
-  top: 3px;
-  right: 10px;
-  cursor: pointer;
+  top: 50%;
+  left: 25%;
+  font-family: 'Abril Fatface', cursive;
+  font-size: 45px;
+  color: #222;
 }
-
-.question-button {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  width: 100px;
-  height: 100px;
-  line-height: 100px;
+.center a {
+  font-size: 80px;
+}
+main {
+  text-align: justify;
+  margin: 0 350px;
+}
+blockquote {
+  font-family: 'Abril Fatface', cursive;
   color: white;
-  font-size: 70px;
+  font-size: 30px;
+  background: grey;
+  margin: 20px 150px;
   text-align: center;
-  border-radius: 50%;
-  background: #3cb878;
-  z-index: 10;
-  cursor: pointer;
 }
-
-.key-features {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+blockquote::before {
+  content: '"';
+  font-size: 40px;
+  font-family: 'IM Fell Double Pica', serif; 
 }
-
-.feature {
-  background: #3cb878;
-  padding: 30px;
-  margin: 10px 0;
+p, li, h1, h2 {
+  font-family: 'Josefin Sans', sans-serif;
+  color: #222;
 }
-
-.feature p {
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 0;
-  text-align: center;
+.vonal {
+  background: black;
+  height: 5px;
+  margin: 30px 0;
+}
+li {
+  padding: 0 0 0 20px;
 }
